--- a/multipath.conf
+++ b/multipath.conf
@@ -22,34 +22,34 @@ devices {
 multipaths {
 	multipath {
 		wwid 3600507680281018750000000000003a1
-		alias rootvg
+		alias rootvg1
 	}
 	multipath {
 		wwid 3600507680281018750000000000003a2
-		alias usr_sap_01
+		alias usr_sap_1
 	}
 	multipath {
-        	wwid 3600507680281018750000000000003a3
-        	alias hana_data_01
+		wwid 3600507680281018750000000000003a3
+		alias hana_data_01
 	}
 	multipath {
-        	wwid 36005076802810187500000000000038c
-        	alias hana_data_02
+		wwid 36005076802810187500000000000038c
+		alias hana_data_02
 	}
 	multipath {
-        	wwid 3600507680281018750000000000003a0
-        	alias hana_data_03
+		wwid 3600507680281018750000000000003a0
+		alias hana_data_03
 	}
 	multipath {
-        	wwid 360050768028101875000000000000398
-        	alias hana_data_04
+		wwid 360050768028101875000000000000398
+		alias hana_data_04
 	}
 	multipath {
-        	wwid 360050768028101875000000000000397
-        	alias hana_log_01
+		wwid 360050768028101875000000000000397
+		alias hana_log_01
 	}
 	multipath {
-        	wwid 3600507680281018750000000000003a4
-        	alias hana_shared_01
+		wwid 3600507680281018750000000000003a4
+		alias hana_shared_01
 	}
 }
