--- a/multipath.conf
+++ b/multipath.conf
@@ -26,23 +26,27 @@ multipaths {
 	}
 	multipath {
 		wwid 3600507680281018750000000000003a2
-		alias usr_sap_1
+		alias usr_sap
 	}
 	multipath {
 		wwid 3600507680281018750000000000003a3
-		alias usr_sap_2
-	}
-	multipath {
-		wwid 36005076802810187500000000000038c
 		alias hana_data_1
 	}
 	multipath {
+		wwid 36005076802810187500000000000038c
+		alias hana_data_2
+	}
+	multipath {
 		wwid 3600507680281018750000000000003a0
-		alias hana_log_1
+		alias hana_data_3
 	}
 	multipath {
 		wwid 360050768028101875000000000000398
-		alias hana_log_2
+		alias hana_data_4
+	}
+	multipath {
+		wwid 360050768028101875000000000000397
+		alias hana_log_1
 	}
 	multipath {
 		wwid 3600507680281018750000000000003a4
