--- a/multipath.conf
+++ b/multipath.conf
@@ -22,31 +22,35 @@ devices {
 multipaths {
 	multipath {
 		wwid 3600507680281018750000000000003a1
-		alias root
+		alias rootvg
 	}
 	multipath {
 		wwid 3600507680281018750000000000003a2
-		alias sap
+		alias usr_sap
 	}
 	multipath {
 		wwid 3600507680281018750000000000003a3
-		alias data_1
+		alias hana_data_1
 	}
 	multipath {
 		wwid 36005076802810187500000000000038c
-		alias data_2
+		alias hana_data_2
 	}
 	multipath {
 		wwid 3600507680281018750000000000003a0
-		alias data_3
+		alias hana_data_3
 	}
 	multipath {
 		wwid 360050768028101875000000000000398
-		alias data_4
+		alias hana_data_4
 	}
 	multipath {
 		wwid 360050768028101875000000000000397
-		alias log_1
+		alias hana_log_1
+	}
+	multipath {
+		wwid 3600507680281018750000000000003a4
+		alias hana_shared_1
 	}
 
 }
